// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 1`] = `
[
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
    ],
    "id": "introductions-1",
    "level": "a1",
    "modelVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-1",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-1-m1",
          "introductions-1-m2",
          "introductions-1-m3",
          "introductions-1-m4",
          "introductions-1-m5",
          "introductions-1-m6",
          "introductions-1-m7",
          "introductions-1-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-1-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-1-t1",
          "introductions-1-t2",
          "introductions-1-t3",
          "introductions-1-t4",
          "introductions-1-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-1-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
    ],
    "id": "introductions-2",
    "level": "a1",
    "modelVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-2",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-2-m1",
          "introductions-2-m2",
          "introductions-2-m3",
          "introductions-2-m4",
          "introductions-2-m5",
          "introductions-2-m6",
          "introductions-2-m7",
          "introductions-2-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-2-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-2-t1",
          "introductions-2-t2",
          "introductions-2-t3",
          "introductions-2-t4",
          "introductions-2-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-2-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-bare-action",
    ],
    "id": "introductions-3",
    "level": "a1",
    "modelVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-3",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-3-m1",
          "introductions-3-m2",
          "introductions-3-m3",
          "introductions-3-m4",
          "introductions-3-m5",
          "introductions-3-m6",
          "introductions-3-m7",
          "introductions-3-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-3-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-3-t1",
          "introductions-3-t2",
          "introductions-3-t3",
          "introductions-3-t4",
          "introductions-3-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-3-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-actions",
    "supportingCanDoIds": [
      "a1-can-do-identity",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
      "a1-family-bare-action",
    ],
    "id": "introductions-4",
    "level": "a1",
    "modelVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-4",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-4-m1",
          "introductions-4-m2",
          "introductions-4-m3",
          "introductions-4-m4",
          "introductions-4-m5",
          "introductions-4-m6",
          "introductions-4-m7",
          "introductions-4-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-4-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-4-t1",
          "introductions-4-t2",
          "introductions-4-t3",
          "introductions-4-t4",
          "introductions-4-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-4-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-origins",
      "a1-can-do-actions",
    ],
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 2`] = `
[
  {
    "lessonId": "introductions-1",
    "level": "a1",
    "moduleId": "introductions",
    "position": 21,
  },
  {
    "lessonId": "introductions-2",
    "level": "a1",
    "moduleId": "introductions",
    "position": 22,
  },
  {
    "lessonId": "introductions-3",
    "level": "a1",
    "moduleId": "introductions",
    "position": 23,
  },
  {
    "lessonId": "introductions-4",
    "level": "a1",
    "moduleId": "introductions",
    "position": 24,
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 3`] = `
[
  {
    "id": "a1-verb-use-a1-sense-be",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-1",
      "roundId": "introductions-1-round-1",
      "targetVariantId": "introductions-1-m1",
    },
    "introductionLessonId": "introductions-1",
    "introductionVariantIds": [
      "introductions-1-m1",
      "introductions-1-m4",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-be",
  },
  {
    "id": "a1-verb-use-a1-sense-work-bare",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-3",
      "roundId": "introductions-3-round-1",
      "targetVariantId": "introductions-3-m1",
    },
    "introductionLessonId": "introductions-3",
    "introductionVariantIds": [
      "introductions-3-m1",
      "introductions-3-m4",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-work-bare",
  },
  {
    "id": "a1-verb-use-a1-sense-study-bare",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-3",
      "roundId": "introductions-3-round-1",
      "targetVariantId": "introductions-3-m5",
    },
    "introductionLessonId": "introductions-3",
    "introductionVariantIds": [
      "introductions-3-m5",
      "introductions-3-m2",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-study-bare",
  },
  {
    "id": "a1-verb-use-a1-sense-do-bare",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-3",
      "roundId": "introductions-3-round-1",
      "targetVariantId": "introductions-3-m3",
    },
    "introductionLessonId": "introductions-3",
    "introductionVariantIds": [
      "introductions-3-m3",
      "introductions-3-m6",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-do-bare",
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact merged EN/IT translation+scenario copy for module 2 1`] = `
{
  "en": {
    "introductions-1-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m1-translation": "Yuki is an artist.",
    "introductions-1-m2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m2-translation": "Ken is a nurse.",
    "introductions-1-m3-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m3-translation": "I am a chef.",
    "introductions-1-m4-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m4-translation": "I am a designer.",
    "introductions-1-m5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m5-translation": "The teacher is a researcher.",
    "introductions-1-m6-scenario": "You are chatting with a colleague at work.",
    "introductions-1-m6-translation": "I am a doctor.",
    "introductions-1-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m7-translation": "Yuki is a doctor.",
    "introductions-1-m8-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m8-translation": "I am a student.",
    "introductions-1-t1-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t1-translation": "Ken is a student.",
    "introductions-1-t2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-t2-translation": "I am a doctor.",
    "introductions-1-t3-scenario": "You are chatting with a colleague at work.",
    "introductions-1-t3-translation": "Yuki is an artist.",
    "introductions-1-t4-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t4-translation": "Yuki is a student.",
    "introductions-1-t5-scenario": "You are chatting with a colleague at work.",
    "introductions-1-t5-translation": "I am a nurse.",
    "introductions-2-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-m1-translation": "Mina is Brazilian.",
    "introductions-2-m2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-m2-translation": "Ken is Canadian.",
    "introductions-2-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-m3-translation": "Yuki is Korean.",
    "introductions-2-m4-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m4-translation": "I am Spanish.",
    "introductions-2-m5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-m5-translation": "I am Italian.",
    "introductions-2-m6-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m6-translation": "Mina is American.",
    "introductions-2-m7-scenario": "You are chatting with a colleague at work.",
    "introductions-2-m7-translation": "Ken is a teacher.",
    "introductions-2-m8-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m8-translation": "Yuki is a student.",
    "introductions-2-t1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-t1-translation": "Mina is Italian.",
    "introductions-2-t2-scenario": "You are chatting with a colleague at work.",
    "introductions-2-t2-translation": "Ken is American.",
    "introductions-2-t3-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-t3-translation": "I am Japanese.",
    "introductions-2-t4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-2-t4-translation": "Yuki is Japanese.",
    "introductions-2-t5-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-t5-translation": "Mina is a student.",
    "introductions-3-m1-scenario": "You are chatting with a colleague at work.",
    "introductions-3-m1-translation": "Rina works.",
    "introductions-3-m2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m2-translation": "Taichi studies.",
    "introductions-3-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m3-translation": "Mei does it.",
    "introductions-3-m4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m4-translation": "Haru works.",
    "introductions-3-m5-scenario": "You are chatting with a colleague at work.",
    "introductions-3-m5-translation": "That person over there studies.",
    "introductions-3-m6-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m6-translation": "I'll do it.",
    "introductions-3-m7-scenario": "You are chatting with a colleague at work.",
    "introductions-3-m7-translation": "Mina works.",
    "introductions-3-m8-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m8-translation": "Yuki studies.",
    "introductions-3-t1-scenario": "You are describing your daily routine at home.",
    "introductions-3-t1-translation": "Mina studies.",
    "introductions-3-t2-scenario": "You are chatting with a colleague at work.",
    "introductions-3-t2-translation": "Ken works.",
    "introductions-3-t3-scenario": "You are chatting with a colleague at work.",
    "introductions-3-t3-translation": "I'll do it.",
    "introductions-3-t4-scenario": "You are chatting with a colleague at work.",
    "introductions-3-t4-translation": "That person over there works.",
    "introductions-3-t5-scenario": "You are describing your daily routine at home.",
    "introductions-3-t5-translation": "I study.",
    "introductions-4-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m1-translation": "Yuki is a student.",
    "introductions-4-m2-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m2-translation": "Ken is a librarian.",
    "introductions-4-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m3-translation": "Yuki is a musician.",
    "introductions-4-m4-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m4-translation": "That person is a writer.",
    "introductions-4-m5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m5-translation": "The classmate studies.",
    "introductions-4-m6-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m6-translation": "I work.",
    "introductions-4-m7-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m7-translation": "Ken will do it.",
    "introductions-4-m8-scenario": "You are describing your daily routine at home.",
    "introductions-4-m8-translation": "I study.",
    "introductions-4-t1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-t1-translation": "Mina is an office worker.",
    "introductions-4-t2-scenario": "You are chatting with a colleague at work.",
    "introductions-4-t2-translation": "That person works.",
    "introductions-4-t3-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-t3-translation": "The classmate is a student.",
    "introductions-4-t4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-t4-translation": "I'll do it.",
    "introductions-4-t5-scenario": "You are describing your daily routine at home.",
    "introductions-4-t5-translation": "Yuki studies.",
  },
  "it": {
    "introductions-1-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m1-translation": "Yuki è un'artista.",
    "introductions-1-m2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m2-translation": "Ken è un infermiere.",
    "introductions-1-m3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m3-translation": "Sono uno chef.",
    "introductions-1-m4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m4-translation": "Sono un designer.",
    "introductions-1-m5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m5-translation": "L'insegnante è un ricercatore.",
    "introductions-1-m6-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-m6-translation": "Io sono un medico.",
    "introductions-1-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m7-translation": "Yuki è un medico.",
    "introductions-1-m8-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m8-translation": "Io sono uno studente.",
    "introductions-1-t1-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t1-translation": "Ken è uno studente.",
    "introductions-1-t2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-t2-translation": "Io sono un medico.",
    "introductions-1-t3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-t3-translation": "Yuki è un'artista.",
    "introductions-1-t4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t4-translation": "Yuki è una studentessa.",
    "introductions-1-t5-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-t5-translation": "Sono un infermiere; un'infermiera.",
    "introductions-2-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-m1-translation": "Mina è brasiliana.",
    "introductions-2-m2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-m2-translation": "Ken è canadese.",
    "introductions-2-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-m3-translation": "Yuki è coreana.",
    "introductions-2-m4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m4-translation": "Sono spagnolo; spagnola.",
    "introductions-2-m5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-m5-translation": "Io sono italiano.",
    "introductions-2-m6-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m6-translation": "Mina è americana.",
    "introductions-2-m7-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-m7-translation": "Ken è un insegnante.",
    "introductions-2-m8-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m8-translation": "Yuki è una studentessa.",
    "introductions-2-t1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-t1-translation": "Mina è italiana.",
    "introductions-2-t2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-t2-translation": "Ken è americano.",
    "introductions-2-t3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-t3-translation": "Io sono giapponese.",
    "introductions-2-t4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-2-t4-translation": "Yuki è giapponese.",
    "introductions-2-t5-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-t5-translation": "Mina è una studentessa.",
    "introductions-3-m1-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-m1-translation": "Rina lavora.",
    "introductions-3-m2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m2-translation": "Taichi studia.",
    "introductions-3-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m3-translation": "Mei lo fa.",
    "introductions-3-m4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m4-translation": "Haru lavora.",
    "introductions-3-m5-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-m5-translation": "Quella persona laggiù studia.",
    "introductions-3-m6-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m6-translation": "Lo farò.",
    "introductions-3-m7-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-m7-translation": "Mina lavora.",
    "introductions-3-m8-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m8-translation": "Yuki studia.",
    "introductions-3-t1-scenario": "Descrivi la tua giornata a casa.",
    "introductions-3-t1-translation": "Mina studia.",
    "introductions-3-t2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-t2-translation": "Ken lavora.",
    "introductions-3-t3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-t3-translation": "Lo farò.",
    "introductions-3-t4-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-t4-translation": "Quella persona laggiù lavora.",
    "introductions-3-t5-scenario": "Descrivi la tua giornata a casa.",
    "introductions-3-t5-translation": "Studio.",
    "introductions-4-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m1-translation": "Yuki è una studentessa.",
    "introductions-4-m2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m2-translation": "Ken è un bibliotecario.",
    "introductions-4-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m3-translation": "Yuki è una musicista.",
    "introductions-4-m4-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m4-translation": "Quella persona è una scrittrice; uno scrittore.",
    "introductions-4-m5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m5-translation": "Il compagno di classe studia.",
    "introductions-4-m6-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m6-translation": "Lavoro.",
    "introductions-4-m7-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m7-translation": "Ken lo farà.",
    "introductions-4-m8-scenario": "Descrivi la tua giornata a casa.",
    "introductions-4-m8-translation": "Studio.",
    "introductions-4-t1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-t1-translation": "Mina è un'impiegata.",
    "introductions-4-t2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-t2-translation": "Quella persona lavora.",
    "introductions-4-t3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-t3-translation": "Il compagno di classe è uno studente.",
    "introductions-4-t4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-t4-translation": "Lo farò.",
    "introductions-4-t5-scenario": "Descrivi la tua giornata a casa.",
    "introductions-4-t5-translation": "Yuki studia.",
  },
}
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact module recipe (module02Recipe) 1`] = `
{
  "id": "introductions",
  "lessonIds": [
    "introductions-1",
    "introductions-2",
    "introductions-3",
    "introductions-4",
  ],
  "order": 6,
  "outcomeCopyId": "a1-module-outcome-introductions",
  "prerequisiteIds": [
    "time-movement",
  ],
}
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact realized Japanese/rōmaji/fingerprint for every module-2 variant 1`] = `
[
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m1",
    "jp": "ゆきはアーティストです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa aatisuto desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-artist,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはアーティストです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m2",
    "jp": "けんはかんごしです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa kangoshi desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-nurse,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはかんごしです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m3",
    "jp": "わたしはシェフです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "watashi wa shefu desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-chef,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはシェフです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m4",
    "jp": "デザイナーです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "dezainaa desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-designer,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "デザイナーです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m5",
    "jp": "せんせいはけんきゅうしゃです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "sensei wa kenkyuusha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-teacher|addressee=a1-role-teacher|subjectReferent=a1-referent-teacher|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-researcher,predicate=a1-value-be,subject=a1-value-teacher-subject",
    "visibleTargetKey": "せんせいはけんきゅうしゃです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-m6",
    "jp": "わたしはいしゃです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "watashi wa isha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-doctor,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはいしゃです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m7",
    "jp": "ゆきはいしゃです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa isha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-doctor,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはいしゃです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m8",
    "jp": "がくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "がくせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t1",
    "jp": "けんはがくせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはがくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-t2",
    "jp": "いしゃです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "isha desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-doctor,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "いしゃです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-t3",
    "jp": "ゆきはアーティストです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa aatisuto desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-artist,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはアーティストです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t4",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-t5",
    "jp": "わたしはかんごしです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "watashi wa kangoshi desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-nurse,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはかんごしです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-m1",
    "jp": "みなはブラジルじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa burazirujin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-brazilian-person,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはブラジルじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-m2",
    "jp": "けんはカナダじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa kanadajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-canadian-person,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはカナダじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-m3",
    "jp": "ゆきはかんこくじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa kankokujin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-korean-person,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはかんこくじんです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m4",
    "jp": "わたしはスペインじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "watashi wa supeinjin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-spanish-person,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "わたしはスペインじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-m5",
    "jp": "イタリアじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "itariajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-italian-person,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "イタリアじんです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m6",
    "jp": "みなはアメリカじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa amerikajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-american-person,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはアメリカじんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-m7",
    "jp": "けんはせんせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa sensei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-teacher,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはせんせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m8",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-t1",
    "jp": "みなはイタリアじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa itariajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-italian-person,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはイタリアじんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-t2",
    "jp": "けんはアメリカじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa amerikajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-american-person,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはアメリカじんです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-t3",
    "jp": "にほんじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "nihonjin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese-person,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "にほんじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-2-t4",
    "jp": "ゆきはにほんじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa nihonjin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese-person,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんじんです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-t5",
    "jp": "みなはがくせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはがくせいです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-m1",
    "jp": "りなははたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work-bare",
    "romaji": "rina wa hatarakimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-work-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-work-bare,subject=a1-value-rina",
    "visibleTargetKey": "りなははたらきます",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m2",
    "jp": "たいちはべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "taichi wa benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-study-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-taichi",
    "visibleTargetKey": "たいちはべんきょうします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m3",
    "jp": "めいはします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-do-bare",
    "romaji": "mei wa shimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-do-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-do-bare,subject=a1-value-mei",
    "visibleTargetKey": "めいはします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m4",
    "jp": "はるははたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work-bare",
    "romaji": "haru wa hatarakimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-work-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-work-bare,subject=a1-value-haru",
    "visibleTargetKey": "はるははたらきます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-m5",
    "jp": "あのひとはべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "ano hito wa benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-study-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-ano-hito",
    "visibleTargetKey": "あのひとはべんきょうします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m6",
    "jp": "します",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-do-bare",
    "romaji": "shimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-do-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-do-bare,subject=a1-value-watashi",
    "visibleTargetKey": "します",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-m7",
    "jp": "みなははたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work-bare",
    "romaji": "mina wa hatarakimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-work-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-work-bare,subject=a1-value-mina",
    "visibleTargetKey": "みなははたらきます",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m8",
    "jp": "ゆきはべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "yuki wa benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-study-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはべんきょうします",
  },
  {
    "contextId": "a1-context-home",
    "id": "introductions-3-t1",
    "jp": "みなはべんきょうします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "mina wa benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-study-bare|context=a1-context-home|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-mina",
    "visibleTargetKey": "みなはべんきょうします",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-t2",
    "jp": "けんははたらきます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-work-bare",
    "romaji": "ken wa hatarakimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-work-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-work-bare,subject=a1-value-ken",
    "visibleTargetKey": "けんははたらきます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-t3",
    "jp": "します",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-do-bare",
    "romaji": "shimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-do-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-do-bare,subject=a1-value-watashi",
    "visibleTargetKey": "します",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-t4",
    "jp": "あのひとははたらきます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-work-bare",
    "romaji": "ano hito wa hatarakimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-work-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-work-bare,subject=a1-value-ano-hito",
    "visibleTargetKey": "あのひとははたらきます",
  },
  {
    "contextId": "a1-context-home",
    "id": "introductions-3-t5",
    "jp": "べんきょうします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-study-bare|context=a1-context-home|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-watashi",
    "visibleTargetKey": "べんきょうします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m1",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m2",
    "jp": "けんはししょです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa shisho desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-librarian,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはししょです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m3",
    "jp": "ゆきはおんがくかです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa ongakuka desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-musician,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはおんがくかです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m4",
    "jp": "そのひとはさっかです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "sono hito wa sakka desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-writer,predicate=a1-value-be,subject=a1-value-sono-hito",
    "visibleTargetKey": "そのひとはさっかです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m5",
    "jp": "クラスメートはべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "kurasumeeto wa benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-classmate|addressee=a1-role-teacher|subjectReferent=a1-referent-classmate|subjectRealization=explicit|sense=a1-sense-study-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-classmate-subject",
    "visibleTargetKey": "クラスメートはべんきょうします",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m6",
    "jp": "はたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work-bare",
    "romaji": "hatarakimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-work-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-work-bare,subject=a1-value-watashi",
    "visibleTargetKey": "はたらきます",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m7",
    "jp": "けんはします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-do-bare",
    "romaji": "ken wa shimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-do-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-do-bare,subject=a1-value-ken",
    "visibleTargetKey": "けんはします",
  },
  {
    "contextId": "a1-context-home",
    "id": "introductions-4-m8",
    "jp": "べんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-study-bare|context=a1-context-home|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-watashi",
    "visibleTargetKey": "べんきょうします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-t1",
    "jp": "みなはかいしゃいんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa kaishain desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-office-worker,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはかいしゃいんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-t2",
    "jp": "そのひとははたらきます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-work-bare",
    "romaji": "sono hito wa hatarakimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-person|subjectRealization=explicit|sense=a1-sense-work-bare|context=a1-context-workplace|form=affirmative:present:polite|slots=predicate=a1-value-work-bare,subject=a1-value-sono-hito",
    "visibleTargetKey": "そのひとははたらきます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-t3",
    "jp": "クラスメートはがくせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "kurasumeeto wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-classmate|addressee=a1-role-teacher|subjectReferent=a1-referent-classmate|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-classmate-subject",
    "visibleTargetKey": "クラスメートはがくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-t4",
    "jp": "します",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-do-bare",
    "romaji": "shimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-do-bare|context=a1-context-first-meeting|form=affirmative:present:polite|slots=predicate=a1-value-do-bare,subject=a1-value-watashi",
    "visibleTargetKey": "します",
  },
  {
    "contextId": "a1-context-home",
    "id": "introductions-4-t5",
    "jp": "ゆきはべんきょうします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-study-bare",
    "romaji": "yuki wa benkyoushimasu",
    "semanticFingerprint": "family=a1-family-bare-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-study-bare|context=a1-context-home|form=affirmative:present:polite|slots=predicate=a1-value-study-bare,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはべんきょうします",
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact recipe/practice/diversity fields for every module-2 lesson 1`] = `
[
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
    ],
    "id": "introductions-1",
    "introducedConceptIds": [
      "a1-concept-topic-wa",
      "a1-concept-copula-desu",
    ],
    "introducedSenseIds": [
      "a1-sense-be",
    ],
    "modelVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
    ],
    "moduleId": "introductions",
    "order": 1,
    "practice": {
      "lessonId": "introductions-1",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-1-m1",
          "introductions-1-m2",
          "introductions-1-m3",
          "introductions-1-m4",
          "introductions-1-m5",
          "introductions-1-m6",
          "introductions-1-m7",
          "introductions-1-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-1-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-1-t1",
          "introductions-1-t2",
          "introductions-1-t3",
          "introductions-1-t4",
          "introductions-1-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-1-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-1-m1",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 1,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
    ],
    "id": "introductions-2",
    "introducedConceptIds": [],
    "introducedSenseIds": [],
    "modelVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
    ],
    "moduleId": "introductions",
    "order": 2,
    "practice": {
      "lessonId": "introductions-2",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-2-m1",
          "introductions-2-m2",
          "introductions-2-m3",
          "introductions-2-m4",
          "introductions-2-m5",
          "introductions-2-m6",
          "introductions-2-m7",
          "introductions-2-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-2-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-2-t1",
          "introductions-2-t2",
          "introductions-2-t3",
          "introductions-2-t4",
          "introductions-2-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-2-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-2-m1",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
    ],
    "id": "introductions-3",
    "introducedConceptIds": [],
    "introducedSenseIds": [
      "a1-sense-work-bare",
      "a1-sense-study-bare",
      "a1-sense-do-bare",
    ],
    "modelVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
    ],
    "moduleId": "introductions",
    "order": 3,
    "practice": {
      "lessonId": "introductions-3",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-3-m1",
          "introductions-3-m2",
          "introductions-3-m3",
          "introductions-3-m4",
          "introductions-3-m5",
          "introductions-3-m6",
          "introductions-3-m7",
          "introductions-3-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-3-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-3-t1",
          "introductions-3-t2",
          "introductions-3-t3",
          "introductions-3-t4",
          "introductions-3-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-3-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-actions",
    "spokenVariantId": "introductions-3-m1",
    "supportingCanDoIds": [
      "a1-can-do-identity",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        4,
        4,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 2,
      "minUniqueTargets": 4,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
    ],
    "id": "introductions-4",
    "introducedConceptIds": [],
    "introducedSenseIds": [],
    "modelVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
    ],
    "moduleId": "introductions",
    "order": 4,
    "practice": {
      "lessonId": "introductions-4",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-4-m1",
          "introductions-4-m2",
          "introductions-4-m3",
          "introductions-4-m4",
          "introductions-4-m5",
          "introductions-4-m6",
          "introductions-4-m7",
          "introductions-4-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-4-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-4-t1",
          "introductions-4-t2",
          "introductions-4-t3",
          "introductions-4-t4",
          "introductions-4-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-4-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 2,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-4-m1",
    "supportingCanDoIds": [
      "a1-can-do-origins",
      "a1-can-do-actions",
    ],
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact variant ids and families (in authored order) per lesson 1`] = `
[
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
    ],
    "id": "introductions-1",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-teacher",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-learner",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-yuki",
      "a1-role-learner",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-self",
      "a1-referent-teacher",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-self",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-yuki",
      "a1-referent-self",
    ],
    "variantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
      "introductions-1-t1",
      "introductions-1-t2",
      "introductions-1-t3",
      "introductions-1-t4",
      "introductions-1-t5",
    ],
  },
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
    ],
    "id": "introductions-2",
    "speakerRoles": [
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-mina",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-self",
      "a1-referent-self",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-mina",
    ],
    "variantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
      "introductions-2-t1",
      "introductions-2-t2",
      "introductions-2-t3",
      "introductions-2-t4",
      "introductions-2-t5",
    ],
  },
  {
    "families": [
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
    ],
    "id": "introductions-3",
    "speakerRoles": [
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-learner",
      "a1-role-learner",
    ],
    "structureKeys": [
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|omitted|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|omitted|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|omitted|affirmative:present:polite|predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-person",
      "a1-referent-person",
      "a1-referent-person",
      "a1-referent-person",
      "a1-referent-person",
      "a1-referent-self",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-person",
      "a1-referent-self",
    ],
    "variantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
      "introductions-3-t1",
      "introductions-3-t2",
      "introductions-3-t3",
      "introductions-3-t4",
      "introductions-3-t5",
    ],
  },
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-bare-action",
      "a1-family-topic-copular",
      "a1-family-bare-action",
      "a1-family-topic-copular",
      "a1-family-bare-action",
      "a1-family-bare-action",
    ],
    "id": "introductions-4",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-learner",
      "a1-role-classmate",
      "a1-role-learner",
      "a1-role-ken",
      "a1-role-learner",
      "a1-role-mina",
      "a1-role-learner",
      "a1-role-classmate",
      "a1-role-learner",
      "a1-role-yuki",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|omitted|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|omitted|affirmative:present:polite|predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-bare-action|omitted|affirmative:present:polite|predicate,subject",
      "a1-family-bare-action|explicit|affirmative:present:polite|predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-person",
      "a1-referent-classmate",
      "a1-referent-self",
      "a1-referent-ken",
      "a1-referent-self",
      "a1-referent-mina",
      "a1-referent-person",
      "a1-referent-classmate",
      "a1-referent-self",
      "a1-referent-yuki",
    ],
    "variantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
      "introductions-4-t1",
      "introductions-4-t2",
      "introductions-4-t3",
      "introductions-4-t4",
      "introductions-4-t5",
    ],
  },
]
`;
